fix selected z-index

--- a/app/assets/stylesheets/editor.scss
+++ b/app/assets/stylesheets/editor.scss
@@ -13,7 +13,3 @@ $handle-bg-color: white;
 	border: 1px solid $select-color;
 	background-color: $handle-bg-color;
 }
-
-.selected-element {
-  border: 1px solid $select-color;
-}
